Remove deprecated new Int/Bool/Float usage in PreferenceWindowSnippet
new Integer(), etc is deprecated and valueOf should be used